# examples

./: .code-workspace  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  eslint.config.ts  justfile  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  tsconfig.cdk.json
.devcontainer/: .gitconfig  Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/prompts/: generate-readme.prompt.md  generate-root-readme.prompt.md
.github/workflows/: aws.yaml  ci.yml  node-test.yml  pulumi-test.yml  python-test.yml  rust.yaml
crates/: justfile
crates/lambda-graphql/: README.md
crates/rust-aoss/: Cargo.toml  seed.json
crates/rust-aoss/src/: lib.rs
crates/rust-aws/: Cargo.toml
crates/rust-boilerplate/: Cargo.toml
crates/rust-cognito/: Cargo.toml
crates/rust-dynamodb/: Cargo.toml  template.yaml
crates/rust-dynamodb/src/: jsonplaceholder.rs  lib.rs  user.rs
crates/rust-lambda-chrome/: .dockerignore  Cargo.toml  Dockerfile  README.md  event.json
crates/rust-lambda-chrome/src/: generic_handler.rs  lib.rs
crates/rust-lambda-graphql/: Cargo.toml  README.md
crates/rust-lambda-graphql/src/: axum_handler.rs  lib.rs  main.rs  query.rs  router.rs  schema.rs
crates/rust-lambda-graphql/src/error/: mod.rs
crates/rust-lambda-graphql/src/model/: greet.rs  info.rs  mod.rs
crates/rust-lambda-graphql/src/resolver/query/: greet.rs  mod.rs
crates/rust-lambda-graphql/src/service/: greet.rs  info.rs
crates/rust-lambda-http/: Cargo.toml  README.md
crates/rust-lambda-http/src/: controller.rs  graphql.rs  lib.rs  main.rs  query.rs  router.rs
crates/rust-lambda-rest/: Cargo.toml  README.md  invoke.sh
crates/rust-lambda-rest/src/: axum_handler.rs  http_handler.rs  lib.rs  main.rs  route_handlers.rs  router.rs
crates/rust-lambda-sqs/: Cargo.toml
crates/rust-lambda-stream/: Cargo.toml  README.md
crates/rust-lambda-stream/src/: controller.rs  http_handler.rs  lib.rs  main.rs  router.rs
crates/rust-lambda-subscription-filter/: Cargo.toml
crates/rust-lambda-subscription-filter/src/: main.rs
crates/rust-mcp/: Cargo.toml  README.md
crates/rust-mcp-agentcore/: .gitignore  Cargo.toml  Dockerfile  build.sh
crates/rust-mcp-agentcore/src/: main.rs
crates/rust-mcp/src/: main.rs
crates/rust-misc/: Cargo.toml
crates/rust-toasty-dynamodb/: Cargo.toml
crates/rust-toasty-dynamodb/src/: lib.rs  main.rs
go/: justfile
java/: justfile
java/aws/: settings.gradle.kts
kubernetes/nginx/: nginx-deployment.yml
modules/java-lambda/: README.md  settings.gradle.kts
node/apollo/: package-lock.json  package.json  tsconfig.json
node/apollo-gateway/: package-lock.json  package.json
nodejs/apollo/: package-lock.json  package.json  tsconfig.json
nodejs/yoga/: package-lock.json  package.json  schema.graphql
others/litellm-agentcore/: Dockerfile  litellm-config.yaml
others/open-webui-bedrock-local/: README.md  litellm-config.yaml
pulumi/: README.md
pulumi/aws-cloudfront-s3/: Pulumi.shared.yaml  Pulumi.yaml  go.mod  go.sum
python/: justfile  pyproject.toml
python/ansible-packer/: build.sh  ec2.pkr.hcl  pyproject.toml  requirements.yaml  template.yaml
python/ansible-packer-molecule/: README.md  build-ami.sh  ec2.pkr.hcl  inventory.yml  pyproject.toml  requirements.yml  site.yaml  site.yml  template-molecule.yml  template-packer.yml  template.yaml
python/ansible-packer-molecule/group_vars/: all.yml
python/ansible-packer-molecule/host_vars/: ec2-instance-api.yml  ec2-instance-batch.yml  ec2-instance-web.yml
python/ansible-packer-molecule/molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  verify.yml
python/ansible-packer-molecule/molecule/default/group_vars/: all.yml
python/ansible-packer-molecule/roles/cloudwatch_agent/handlers/: main.yml
python/ansible-packer-molecule/roles/cloudwatch_agent/tasks/: main.yml
python/ansible-packer/molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml
python/ansible-packer/molecule/default/group_vars/: all.yml
python/ansible-packer/playbooks/: site.yaml
python/python-lambda-adapter/: Dockerfile  README.md  pyproject.toml
python/python-lambda-adapter/src/: main.py
python/python-lambda-adapter/src/python_lambda_adapter/: main.py
python/python-lambda-fastapi/: README.md  pyproject.toml
python/python-lambda-fastapi/scripts/: build.py  build.sh
python/python-lambda-fastapi/src/: controller.py  lambda.py  main.py  resolver.py  router.py
python/python-lambda-fastapi/src/python_lambda_fastapi/: lambda.py  local.py  resolver.py  router.py
python/python-llama-index/: .gitignore  README.md  pyproject.toml
python/python-llama-index/data/: kestrel_station.md  meridian_institute.md
python/python-llama-index/src/python_llama_index/: advanced_rag.py  basic_llm.py  basic_rag.py  manage_documents.py  rag_fusion.py
python/python-llama-index/tests/: test_imports.py  test_manage_documents.py
python/python-sagemaker/: pyproject.toml
python/python-strands-agents/: .gitignore  pyproject.toml
python/python-strands-agents/src/: basic_agent.py  deploy_to_agentcore.py  with_mcp.py
python/python-strands-agents/src/python_strands_agents/: basic_agent.py  deploy_to_agentcore.py  main.py  with_mcp.py
stacks/: README.md  justfile
stacks/agentcore-web-search/agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
stacks/agentcore-web-search/agent/src/agentcore_web_search/: __init__.py  agents.py  config.py  gateway.py  main.py  model_auth.py  models.py  openrouter.py
stacks/agentcore-web-search/agent/tests/: test_agent_options.py  test_config.py  test_gateway_token.py  test_live_invoke.py  test_model_auth.py
stacks/aws-lambda-microvms/control/: pyproject.toml
stacks/aws-lambda-microvms/control/src/microvm_control/: __init__.py  cli.py
stacks/aws-lambda-microvms/image/: Dockerfile  pyproject.toml
stacks/aws-lambda-microvms/image/src/microvm_sandbox/: __init__.py  hooks.py  main.py  sandbox.py  session.py
stacks/aws-lambda-microvms/image/tests/: test_session.py
terraform/: README.md
(+267 files in other folders)
