[package]
name = "rust-aoss"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.6"
dotenvy = "0.15.7"
opensearch = { version = "2.3.0", features = ["aws-auth", "rustls-tls"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
