[package]
name = "rust-aoss"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

dotenvy = "0.15.7"
opensearch = { version = "2.4.0", features = ["aws-auth", "rustls-tls"] }
url = "2.5.8"
