[package]
name = "rust-aws"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.13"
aws-sdk-s3 = "1.122.0"
aws-sdk-sts = "1.96.0"
infer = "0.19.0"
reqwest = { version = "0.12.28", default-features = false, features = ["gzip", "http2", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
