[package]
name = "rust-aws"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, features = ["gzip"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

aws-sdk-s3 = "1.132.0"
aws-sdk-sts = "1.101.0"
infer = "0.19.0"
lettre = { version = "0.11.22", features = [
    "aws-lc-rs",
    "rustls",
    "rustls-platform-verifier",
] }
