[package]
name = "rust_dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", features = ["rustls"] }
aws-sdk-dynamodb = "1.100.0"
reqwest = { version = "0.12.25", default-features = false, features = [
  "gzip",
  "http2",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
