[package]
name = "rust_dynamodb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true, features = ["rustls"] }
reqwest = { workspace = true, features = ["gzip"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

aws-sdk-dynamodb = "1.112.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
