[package]
name = "rust-lambda-chrome"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }

fast_html2md = "0.0.62"
headless_chrome = "1.0.21"
lambda_runtime = "1.2.1"
tracing = "0.1.44"
