[package]
name = "rust-lambda-graphql"
edition = "2021"


[dependencies]
async-graphql = "7.0.17"
axum = "0.8.4"
lambda_http = "0.15.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["compression-full"] }
