[package]
name = "rust-lambda-http"
edition = "2021"


[dependencies]
async-graphql = "7.0.17"
axum = "0.8.8"
lambda_http = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["compression-full"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
