[package]
name = "rust-lambda-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", default-features = false }
http = "1.3.1"
lambda_http = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1", features = ["macros"] }
tower = "0.5.2"
