[package]
name = "rust-lambda-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.10"
aws-sdk-bedrockruntime = "1.115.0"
axum = "0.8.7"
bytes = "1.11.0"
futures = "0.3.31"
lambda_http = "1.0.1"
reqwest = { version = "0.12.24", features = [
    "http2",
    "rustls-tls",
    "stream",
], default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"

tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["compression-full"] }
