[package]
name = "rust-lambda-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.14"
aws-sdk-bedrockruntime = "1.126.0"
axum = "0.8.8"
bytes = "1.11.1"
futures = "0.3.32"
lambda_http = "1.0.2"
reqwest = { version = "0.12.28", features = [
    "http2",
    "rustls-tls",
    "stream",
], default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"

tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["compression-full"] }
