[package]
name = "rust-lambda-stream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true }
axum = { workspace = true }
lambda_http = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

aws-sdk-bedrockruntime = "1.132.0"
bytes = "1.11.1"
futures = "0.3.32"
