[package]
name = "rust-mcp-agentcore"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rmcp = { version = "1.5.0", features = [
    "transport-streamable-http-server",
    "macros",
] }
rmcp-macros = "1.4.0"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
