[package]
name = "rust-mcp-agentcore"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
rmcp-macros = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
