[package]
name = "rust-misc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt-multi-thread"] }
