[package]
name = "rust-toasty-dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
toasty = { version = "0.4.0", features = ["dynamodb"] }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.0", features = ["v4"] }
