[package]
name = "rust-toasty-dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
toasty = { version = "0.5.0", features = ["dynamodb"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4"] }
