[package]
name = "rust-toasty-dynamodb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

toasty = { version = "0.9.0", features = ["dynamodb"] }
uuid = { version = "1.23.3", features = ["v4"] }
