[project]
name = "ansible-packer"
version = "0.1.0"
description = "Ansible + Packer + Molecule AMI build example (CLI tooling only, no Python package)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.19.2",
    "ansible-lint>=25.9.0",
    "boto3>=1.40.33",
    "botocore>=1.40.33",
    "molecule>=25.9.0",
]
