[project]
name = "ansible-packer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.19.1",
    "ansible-lint>=25.9.0",
    "boto3>=1.40.25",
    "botocore>=1.40.25",
    "molecule>=25.7.0",
    "molecule-plugins[aws-ssm,ec2]>=25.8.12",
]
