[project]
name = "python-lambda-adapter"
version = "0.1.0"
description = "FastAPI on AWS Lambda via aws-lambda-web-adapter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.7.0,<0.9.0"]
build-backend = "uv_build"
