[project]
name = "python-lambda-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-typing>=2.20.0",
    "fastapi>=0.116.0",
    "mangum>=0.19.0",
    "strawberry-graphql[fastapi,federation]>=0.275.5",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
