[project]
name = "python-lambda-fastapi"
version = "0.1.0"
description = "FastAPI + Strawberry GraphQL on AWS Lambda via Mangum"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "mangum>=0.19.0",
    "strawberry-graphql[fastapi,federation]>=0.275.5",
]

[dependency-groups]
dev = ["uvicorn>=0.35.0"]

[build-system]
requires = ["uv_build>=0.7.0,<0.9.0"]
build-backend = "uv_build"
