[project]
name = "python-strands-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.3",
    "strands-agents>=1.8.0",
    "strands-agents-builder>=0.1.9",
    "strands-agents-tools>=0.2.7",
]
