[project]
name = "python-strands-agents"
version = "0.1.0"
description = "Strands Agents examples (Bedrock, MCP, AgentCore)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.3",
    "strands-agents>=1.8.0",
    "strands-agents-builder>=0.1.9",
    "strands-agents-tools>=0.2.7",
]

[build-system]
requires = ["uv_build>=0.7.0,<0.9.0"]
build-backend = "uv_build"
