# A member of the repo-root uv workspace. Dev tooling (ruff/pyright/pytest) and
# the lockfile live at the workspace root; this file declares only runtime
# dependencies and how the package is built.
[project]
name = "agentcore-web-search"
version = "0.1.0"
description = "Strands web-search + synthesize agents on Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.3",
    "strands-agents[openai]>=1.8.0",
    "strands-agents-tools>=0.2.7",
    "mcp>=1.9.0",
    "httpx>=0.27",
    "boto3>=1.35",
]

[build-system]
requires = ["uv_build>=0.7.0,<0.9.0"]
build-backend = "uv_build"
