# A member of the repo-root uv workspace. Dev tooling (ruff/pyright/pytest) and
# the lockfile live at the workspace root; this file declares only the operator
# CLI's runtime dependencies.
[project]
name = "microvm-control"
version = "0.1.0"
description = "Operator CLI for the AWS Lambda MicroVMs code-exec sandbox example"
requires-python = ">=3.13"
dependencies = [
    # 1.43.36 is the first botocore/boto3 release with the lambda-microvms client.
    "boto3>=1.43.36",
    "httpx>=0.27",
]

[project.scripts]
microvm-control = "microvm_control.cli:main"

[build-system]
requires = ["uv_build>=0.7.0,<0.9.0"]
build-backend = "uv_build"
